lesson 1 errors
